# ibus-t9

./: .gitignore  AUTHORS  Makefile.am  README  autogen.sh  configure.ac  ibus-t9.spec.in
debian/: README.Debian  changelog  control  copyright  dirs  manpage.1  rules
icons/: Makefile.am
m4/: Makefile.am
po/: POTFILES.in  zh_CN.po
src/: Makefile.am  decoder.c  engine.c  engine.h  ibus-t9.xml.in.in  lookuptable.c  lookuptable.h  main.c  prase.c  prase.h
tables/: Makefile.am  table.txt
